# pep440-versions

./: README.md  azure-pipelines.yml  pyproject.toml
tests/: utils_test.py  version_test.py
